--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.7.0",
+    "critical": "^1.3.3",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "gulp": "^4.0.0",
